# vnm_qml_chrome

./: .cirrus.yml  .gitignore  CMakeLists.txt  README.md  vnm_qml_chrome.qrc
.github/workflows/: build-and-test.yml  ci-freebsd.yml  ci-linux.yml  ci-macos.yml  ci-windows.yml
docs/: deferred_review_items.md  feat_optional_window_buttons_pre_merge_plan.md
examples/solid_window/: main.cpp  main.qml  solid_window.qrc
include/vnm_qml_chrome/: vnm_chrome_geometry.h  vnm_native_window_frame.h  vnm_qml_chrome_runtime.h  vnm_system_window.h
qml/: VNM_AnimatedMark.qml  VNM_ChromeBottomResizeLayer.qml  VNM_ChromeFrameShell.qml  VNM_ChromeResizeArea.qml  VNM_ChromeSideResizeLayer.qml  VNM_ChromeTheme.qml  VNM_ChromeTitleBar.qml  VNM_ChromeWindowButton.qml  VNM_ChromeWindowFrame.qml  VNM_DarkModeTitleButton.qml  VNM_LanguageTitleButton.qml  VNM_TitleBarRoundButton.qml  qmldir
src/: vnm_chrome_geometry.cpp  vnm_native_window_frame.cpp  vnm_qml_chrome_runtime.cpp  vnm_system_window.cpp
tests/: vnm_chrome_contract_tests.cpp
